syntax = "proto3";
package auth_gs_uav;

// It is a message that is sent by the UAV to the GS at the first time.
// It include uav's ruid 
message UavAuthHelloMessage{
    bytes ruid = 1;
}


// When the GS receives the Uav hello message
// It will send the UavAuthGsPublicParam message to the UAV.
message UavAuthGsPublicParamMessage {
    int64 t_gs = 1;
    bytes id_gs = 2;
    bytes r_gs = 3;
    bytes q_gs = 4;
    bytes c = 5;
}

// When the UAV receives the UavAuthGsPublicParam message
// It will send the UavAuthPhase1Message to the GS.
message UavAuthPhase1Message {
    int64 t_u = 1;
    bytes tuid_i = 2;
    bytes r_u = 3;
    bytes v_i = 4;
    bytes gamma_i = 5;
}

// When the GS receives the UavAuthPhase1Message
// It will send the UavAuthPhase2Message to the UAV.
// If the status is 0, it means the UAV is authenticated successfully.
message UavAuthPhase2Message {
    int32 status = 1;
}


message UavAuthRequest {
    oneof request {
        UavAuthHelloMessage hello = 1;
        UavAuthPhase1Message uav_auth_phase1 = 2;
    }
}

message UavAuthResponse {
    oneof response {
        UavAuthGsPublicParamMessage gs_public_param = 1;
        UavAuthPhase2Message uav_auth_phase2 = 2;
    }
}