syntax = "proto3";
package communicate_gs_uav; 

// Communication structure used between uav and gs
message CommunicateMessage {
    bytes encrypted_data = 1;
}

// Some parameters of the construction key, which used to encrypt the communication message
message CommunicateParamMessage {
    bytes lambda = 1;
    int64 t = 2;
    bytes c = 3;
}


// Message including the ruid list
message NeedCommunicateRuidListMessage {
    repeated string ruid = 1;
}

message UavRuidListMessage {
    string ruid = 1;
    string ip_addr = 2;
}

message UavCommunicateParamMessage {
    bytes ssk = 1;
    repeated string c = 2;
}


// The request message used to communicate uav to gs
message UavGsCommunicateRequest {
    oneof request {
        CommunicateMessage communicate_message = 1;
        NeedCommunicateRuidListMessage need_communicate_ruid_list = 2;
    }
}

// The response message used to communicate gs to uav
message UavGsCommunicateResponse {
    oneof response {
        CommunicateParamMessage communicate_param = 1;
        CommunicateMessage communicate_message = 2;
        UavRuidListMessage already_authenticated_ruid_list = 3;
        UavCommunicateParamMessage uav_communicate_param = 4;
    }
}   